[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemies/respawner.gd" type="Script" id=1]

[node name="respawner" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="timer_spawn" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true

[node name="timer_retry" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[connection signal="timeout" from="timer_spawn" to="." method="_on_timer_spawn_timeout"]

[connection signal="timeout" from="timer_retry" to="." method="_on_timer_retry_timeout"]


